# soc

./: README.md  soc  xtest
lib/: driver.ml  dune  (+2 more)
test/: dune  test_aux.ml  test_aux.mli
test/backend/: backend_aux.ml  backend_aux.mli  cir_test.ml  label_test.ml  liveness_analysis_test.ml  reg_alloc_test.ml  temp_test.ml  vasm_test.ml
test/backend/cir-resources/: freevar.expect  freevar.soml
test/frontend/: ast_interp_test.ml  lexer_test.ml  location_test.ml  parser_test.ml  span_test.ml
test/frontend/ast-interp-resources/: fac.soml  short_circuit.expect  short_circuit.soml
test/frontend/interp/: ast_interp_test.ml
test/frontend/lexer-resources/: lexer_input_mixed.soml
test/frontend/parser-resources/: parser_input_mixed.expect  parser_input_mixed.soml
test/frontend/parsing/: lexer_test.ml  parser_test.ml
test/frontend/typing/: infer_test.ml  substs_test.ml  typer_test.ml
test/integration/: dune  test_integration.ml
test/integration/resources/: arg_spill.soml  basic.expect  basic.soml  closures.expect  closures.soml  nested_if.expect  nested_if.soml
test/soc/: dune
test/soc/backend/: backend_aux.ml  cir_test.ml  graph_test.ml  liveness_analysis_test.ml  reg_alloc_test.ml  var_namer_test.ml
test/soc/common/: namer_test.ml
test/soc/frontend/: span_test.ml
test/soc/stdlib/: char_test.ml  int_test.ml  list_test.ml  map_test.ml  pervasives_test.ml  result_test.ml  set_test.ml  stdlib_util_test.ml  string_test.ml
test/stdlib/: char_test.ml  filename_test.ml  int_test.ml  list_test.ml  map_test.ml  option_test.ml  set_test.ml  string_test.ml
(+157 files in other folders)
