(tests
  (names
   ; stdlib
   list_test option_test set_test map_test int_test char_test string_test
   result_test

   ; frontend
   location_test span_test lexer_test parser_test ast_interp_test typer_test
   substs_test

   ; helper functions
   test_aux
  )
  (libraries ounit2 soc)
)

(include_subdirs unqualified)
